css issue fixcss update and app config css fix (#3068)
* css issue fix, logo, radio button, label truncate, button mycampaign

* limit update

* css update and app config css fix

---------

--- a/health/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/campaign.scss
+++ b/health/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/campaign.scss
@@ -326,6 +326,9 @@
   box-shadow: none;
   border-style: none;
   padding: 1rem;
+  .digit-card-header {
+    font-size: 2rem;
+  }
 }
 .mobile-bezel-outerWrapper {
   transform: scale(0.8);
